syntax = "proto3";
package project;
option go_package = "./protos/project;project";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
//项目服务
service Project{
    rpc GetProject(GetProjectReq) returns(google.protobuf.Empty){
        option (google.api.http) = {
            post: "/project/getProject"
            body: "*"
        };
    };
}
message GetProjectReq{
    string name = 1;
}



